re PR tree-optimization/30159 (gcc.c-torture/execute/20010422-1.c is miscompiled)

2006-12-12  Andrew Macleod  <amacleod@redhat.com>

	PR tree-optimization/30159
	* tree-ssa-coalesce.c (coalesce_ssa_name): Process single ssa_name 
	functions in case a default_def coalesce is required.

From-SVN: r119792